<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="293dp"
        android:layout_height="56dp"
        android:focusable="false"
        android:text="@string/StartButton1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="293dp"
        android:layout_height="56dp"
        android:focusable="false"
        android:text="@string/StartButton2"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:id="@+id/button3"
        android:layout_width="293dp"
        android:layout_height="56dp"
        android:focusable="false"
        android:text="@string/StartButton3"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="372dp"
        android:layout_height="44dp"
        android:text="@string/Description"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="313dp"
        android:layout_height="23dp"
        android:layout_marginBottom="7dp"
        android:text="@string/DescriptionResult"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.068"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>